Fixed timeset sliders not showing for some ppi.

--- a/src/components/CoachPersonalDataTime/style.less
+++ b/src/components/CoachPersonalDataTime/style.less
@@ -28,13 +28,13 @@
 				width: 200px;
 
 				&-rail {
-					height: 1px;
+					height: 0.1em;
 					background-color: #000;
 				}
 
 				&-track {
 					background-color: #21bedd;
-					height: 1px;
+					height: 0.1em;
 				}
 
 				&-disabled {
